Make most openapi fields required
Add GET routes for incidents/components
